sunburst graph drawing function created.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="reportBody">
             <div id="reportGraph">
                 <h1 id="folderDesc">
-                    Arquivos no HD - 
+                    Arquivos na pasta 
                 </h1>
             <br/>
             <br/>
